[package]
name = "serust"
repository = "https://github.com/thewh1teagle/serust"
homepage = "https://thewh1teagle.github.io/serust/"
authors = ["thewh1teagle"]
version = "0.0.3"
edition = "2021"
license = "MIT"
description = "Serial monitor cli in rust"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
serialport5 = { version = "5.0.2"} # currenly the only branch which works on windows
toml = "0.8.19"
serde = { version = "1.0.215", features = ["derive"]}
regex = "1"
chrono = "0.4.38"
crossterm = "0.28.1"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.10.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"

allow-dirty = ["ci"]
