[package]
name = "spewcap"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"] }
serialport5 = { version = "5.0.2"} # currenly the only branch which works on windows
toml = "0.8.19"
serde = { version = "1.0.215", features = ["derive"]}
regex = "1"
chrono = "0.4.38"
crossterm = "0.28.1"
colored = "2.1.0"
term_size = "0.3.2"
rfd = "0.15.1"
